src/less/components/permission/permissions.less
.share-dialog {
    display: flex;
    flex-direction: column;
    align-self: stretch;
    align-items: center;
    box-sizing: border-box;
    padding: 6.4rem 39rem 12.8rem;

    .dialog {
        padding: 0;
        max-width: 70rem;
        min-width: 50rem;
        margin: 0;
        display: flex;
        flex-direction: column;
        width: 100%;
        max-height: 100%;
        align-self: center;

        .dialog-header {
            padding: 2.4rem;

            .dialog-title-wrapper h2 {
              font-size: 2.4rem;
            }
          }

  .dialog-content {
    display: flex;
    padding-right: 1.6rem;
    padding-left: 1.6rem;
    align-items: center;
    align-self: stretch;
    min-height: 0;

    .share-form {
        display: flex;
        flex-direction: column;
        justify-content: flex-start;
        align-items: flex-start;
        flex: 1 0 0;
        align-self: stretch;

        .form-content {
          padding: 0;
          max-height: calc(100% - 6.8rem);
          min-height: 0;
          display: flex;
          flex-direction: column;
          align-items: stretch;

          > * {
            margin-bottom: 0;
          }
        }

        .permission-add {
          padding: 1.6rem;
        }

        .input.text.autocomplete input  {
          margin-bottom: 0;
        }

        // remove all margin bottom for direct child element
        & > * {
          margin-bottom: 0;
        }
      }

      .submit-wrapper {
        display: flex;
        padding: 1.6rem 0;
        justify-content: flex-end;
        align-items: center;
        gap: 2.4rem;
        align-self: stretch;
      }
    }
  }
}

.dialog {
    .permissions {
        &.scroll {
            .scroll-shadow();
            margin: 0;
        }

        .row {
            .clearfix();
            padding: 1.6rem;
            border-bottom: 1px solid var(--Workspace-Dividers);
            display: flex;
            align-items: center;
            overflow: hidden;

            &.permission-updated {
                background: var(--Notifications-Alert-background);
            }

            /* aro summary */
            .avatar {
                float: left;

                svg {
                  width: 4.2rem;
                  height: 4.2rem;
                }
            }
            .aro {
                flex: 1 1 auto;
                width: 30%;
                float: left;
                padding: 0 1rem 0 1.6rem;
                .aro-name {
                  display: flex;
                  align-items: center;
                  font-size: 1.5rem;
                  line-height: 2rem;
                  font-weight: 700;
                }
                .aro-details {
                    display: flex;
                    font-size: 1.2rem;
                    line-height: 1.6rem;
                    color: var(--Text-and-icons-Secondary-text);
                }
                .ellipsis {
                    display:inline-block;
                    max-width:90%;
                }
            }

            .tooltip-portal {
                margin: 0 .8rem;
                line-height: 1.6rem;

                svg {
                  width: 1.6rem;
                  height: 1.6rem;
                }
            }

            .rights {
                float: left;
                flex: 0 1 auto;
            }


            .remove-item {
              margin-left: .8rem;
            }
        }

        /* shimmering skeleton when loading */
        .row.skeleton {
            height:42px;
            position:relative;
            .avatar {
                float: left;
                width: 4.2rem;
                height: 4.2rem;
                background: var(--Dialog-Dialog-background);
                border-radius:50%;
                flex:none
            }
            .aro {
                .aro-name {
                    margin-top:.25em;
                    width: 7em;
                    height: 1em;
                    background: var(--Dialog-Dialog-background);
                    .rounded();
                }
                .aro-details {
                    .rounded();
                    margin-top:.5em;
                    width: 10em;
                    height: 1em;
                    background: var(--Dialog-Dialog-background);
                }

            }
            .actions {
                border-radius:50%;
                float:right;
                width: 1.116rem;
                height: 1.116rem;
                margin-top:.7rem;
                margin-right:1.62rem;
                background: var(--Dialog-Dialog-background);
                margin-left:0.625rem;
            }
            .shimmer {
                position:absolute;
                top:0;
                left:0;
            }
        }

        li.suspended {
            .avatar, .aro .aro-name .ellipsis, .aro-details, .permission_changes {
                opacity: 0.5;
            }
        }
    }
}

